[package]
name = "dreamtime-server"
version = "0.1.0"
authors = ["Kirill Lastovirya <kirill.lastovirya@gmail.com>"]
edition = "2018"

[lib]
name = "dreamtime_library"
path = "src/lib.rs"

[[bin]]
name = "dbconsole"
path = "src/bin/dbconsole.rs"

[[bin]]
name = "webserver"
path = "src/bin/webserver.rs"

[dependencies]
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
