[package]
name = "dreamtime-server"
version = "0.1.0"
authors = ["Kirill Lastovirya <kirill.lastovirya@gmail.com>"]
edition = "2018"

[lib]
name = "dreamtime_library"
path = "src/lib.rs"

[[bin]]
name = "dbconsole"
path = "src/bin/dbconsole.rs"

[[bin]]
name = "webserver"
path = "src/bin/webserver.rs"

[dependencies]
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
# diesel_geometry = { version = "1.4.0", features = ["serde"] }
postgis_diesel = "0.1.0"
postgis = "0.8"
dotenv = "0.15.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }

base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }